# game-moveit

./: .gitignore  LICENCE  README.md  example.py  mkdocs.yml  play.py  pyproject.toml
docs/: bots.md  dijkstra.md  faq.md  index.md  iterative.md  rules.md  tests.md
play/: debug.py  moveit.py
sandbox/: bot.py  config-2p-7x10.json  config-7x10.json  config-simple.json  launcher.py  test_pathes.py
src/hacka/games/moveit/: __init__.py  board.py  gameengine.py  gamemaster.py  map.py  mobile.py  player.py  shell.py
src/hacka/games/moveit/tiled/: map.py  shape.py  tile.py
src/hkgMoveIt/: __init__.py  board.py  firstBot.py  mobile.py  shell.py
tests/: local.py  test_99_moveIt_01_absGame.py  test_99_moveIt_11_hexaboard.py  test_99_moveIt_11_robot.py  test_99_moveIt_12_asPod.py  test_99_moveIt_20_gameRobot.py  test_99_moveIt_21_gameWithHuman.py  test_99_moveIt_30_player.py  test_99_moveIt_40_debug_stories.py  test_moveIt_01_gameMaster.py  test_moveIt_01_map.py  test_moveIt_02_board.py  test_moveIt_02_gameengine.py  test_moveIt_02_map.py  test_moveIt_03_gamemaster.py  test_moveIt_04_players.py  test_moveIt_05_with-vips.py  test_moveIt_06_simulate.py
tests/02-board/: test_01_shape.py  test_02_tile.py  test_03_board.py  test_03_pieces.py
tests/11-artist/: test_01_inter_artist.py  test_02_inter_svg.py  test_03_inter_cairo.py  test_04_artist_panel.py  test_11_board.py
